:building_construction: Generate Resume PDF

--- a/src/public/components/Navbar/styles.scss
+++ b/src/public/components/Navbar/styles.scss
@@ -47,7 +47,8 @@
 
 .navbar__component-list {
   list-style: none;
-
+  margin-left: 20px;
+  
   li {
     display: inline-block;
     padding: 12px;
