--- a/src/public/components/Footer/styles.scss
+++ b/src/public/components/Footer/styles.scss
@@ -7,3 +7,15 @@
     width: calc(100% / 3);
   }
 }
+
+.footer__flags {
+  .footer__flags-item {
+    display: inline-block;
+    margin: 6px;
+  }
+
+  .footer__flag {
+    height: 20px;
+    cursor: pointer;
+  }
+}
