:building_construction: Light Refactor

--- a/src/public/variables.scss
+++ b/src/public/variables.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $red: #f00;
 $green: #2c7d1e;
 $blue: #2fa4f7;
+$darkBlue: #11486e;
 $teal: #1e7d78;
 $lightBrown: #a27749;
 $lightGray: #e7e7e7;
@@ -10,7 +11,7 @@ $darkGray: #5d5d5d;
 
 $primaryColor: $blue;
 $secondaryColor: $darkGray;
-$linkColor: $lightBrown;
+$linkColor: $darkBlue;
 $linkColorText: lighten($linkColor, 60);
 
 $primaryColor_light: lighten($primaryColor, 40);
