:building_construction: Added FR locale

--- a/src/public/styleguide.scss
+++ b/src/public/styleguide.scss
@@ -81,6 +81,14 @@ h3 {
   }
 }
 
+.skeleton {
+  display: block;
+
+  .bg-light {
+    background-color: $lightGray;
+  }
+}
+
 .vertical-align-middle {
   display: inline-block;
   vertical-align: middle;
