--- a/src/public/components/Article/styles.scss
+++ b/src/public/components/Article/styles.scss
@@ -9,20 +9,6 @@
     padding: 36px 2px;
     background-color: $white;
     z-index: $top_max;
-
-    &:before {
-      content: ' ';
-      position: absolute;
-      left: 0;
-      top: -3px;
-      height: 100%;
-      width: 100%;
-      display: block;
-      z-index: -1;
-      opacity: .1;
-      background: $primaryColor;
-      background: linear-gradient(270deg, $primaryColor 0%, rgba(17,163,221,0) 80%);
-    }
   }
 
   details {
@@ -35,5 +21,15 @@
     background-color: $lightGray;
     cursor: pointer;
     padding: 6px 12px;
+  }
+}
+
+.mobile {
+  .article__component-h2 {
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    padding: 12px;
+    border-bottom: solid 1px $lightGray;
   }
 }
