--- a/src/public/components/Gallery/styles.scss
+++ b/src/public/components/Gallery/styles.scss
@@ -7,5 +7,18 @@
 }
 
 .image-list-item__image {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.mobile {
+  .image-list {
+    text-align: center;
+  }
+
+  .image-list-item {
+    width: 130px;
+    height: auto;
+    margin: 6px;
+  }
 }
