--- a/src/public/css-reset.css
+++ b/src/public/css-reset.css
@@ -22,15 +22,21 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
+	max-width: 100%;
+	display: block;
+	overflow-x: hidden;
 }
+
 ol, ul {
 	list-style: none;
 }
