:building_construction: Copywriting

--- a/src/public/styleguide.scss
+++ b/src/public/styleguide.scss
@@ -24,6 +24,16 @@ strong {
   }
 }
 
+button {
+  border: 0;
+}
+
+em {
+  &.alt {
+    border-bottom: dotted 2px $primaryColor;
+  }
+}
+
 em {
   font-style: italic;
 }
