--- a/src/public/components/Gallery/styles.scss
+++ b/src/public/components/Gallery/styles.scss
@@ -4,6 +4,11 @@
   display: inline-block;
   vertical-align: top;
   margin: 12px;
+
+  h4 {
+    font-size: 10px;
+    line-height: 18px;
+  }
 }
 
 .image-list-item__image {
