--- a/src/public/components/Posts/styles.scss
+++ b/src/public/components/Posts/styles.scss
@@ -15,9 +15,24 @@
 }
 
 .posts_list_quote {
-  font-size: 14px;
   font-weight: light;
   text-align: justify;
+
+  h3,
+  p {
+    line-height: 26px;
+    margin: 0;
+    padding: 0;
+  }
+
+
+  p {
+    font-size: 14px;
+  }
+  
+  h3 {
+    font-size: 16px;
+  }
 }
 
 .posts_list-item.strong {
