:building_construction: Fix bad copy

--- a/src/public/styleguide.scss
+++ b/src/public/styleguide.scss
@@ -398,4 +398,9 @@ summary  {
         display: block;
       }
   }
+
+  .employment-highlight__h3 {
+    font-size: 16px;
+    padding: 0 40px;
+  }
 }
