--- a/src/public/components/Navbar/styles.scss
+++ b/src/public/components/Navbar/styles.scss
@@ -13,7 +13,7 @@
 }
 
 .navbar_right {
-  margin: 12px 24px 0 0;
+  margin: 9px 24px 0 0;
   float: right;
   font-size: 24px;
 
@@ -64,6 +64,7 @@
   }
 }
 
+.tablet,
 .mobile {
   .navbar__component .navbar__component-list {
     display: none;
