--- a/src/public/components/Article/styles.scss
+++ b/src/public/components/Article/styles.scss
@@ -26,10 +26,9 @@
 
 .mobile {
   .article__component-h2 {
-    font-size: 18px;
-    line-height: 26px;
-    text-align: center;
-    padding: 12px;
-    border-bottom: solid 1px $lightGray;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: left;
+    padding: 12px 0;
   }
 }
