--- a/src/public/components/Gallery/styles.scss
+++ b/src/public/components/Gallery/styles.scss
@@ -6,8 +6,10 @@
   margin: 12px;
 
   h4 {
-    font-size: 10px;
-    line-height: 18px;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: normal;
+    margin-top: 0;
   }
 }
 
