--- a/src/public/components/Posts/styles.scss
+++ b/src/public/components/Posts/styles.scss
@@ -1,17 +1,23 @@
 @import '../../variables.scss';
 
 .posts_list_component {
-  text-align: center;
+  display: block;
 }
 
 .posts_list-item {
   text-align: left;
-  margin: 0 0 24px;
+  margin: 0 0 36px;
   padding: 0 24px;
   display: inline-block;
   vertical-align: top;
-  width: 500px;
+  width: 50%;
+  min-width: 300px;
   max-width: 100%;
+
+  a {
+    text-align: right;
+    display: block;
+  }
 }
 
 .posts_list_quote {
@@ -27,11 +33,12 @@
 
 
   p {
-    font-size: 14px;
-  }
-  
-  h3 {
     font-size: 16px;
+  }
+
+  h3 {
+    font-size: 20px;
+    margin-bottom: 6px;
   }
 }
 
@@ -58,5 +65,18 @@
 .mobile {
   .posts_list-item {
     width: 100%;
+
+    h3 {
+      margin-bottom: 18px;
+    }
+  }
+
+  .posts_list-item.strong {
+    border-left: 0;
+    padding: 0 24px;
+
+    img {
+      display: none;
+    }
   }
 }
