--- a/src/public/components/Navbar/styles.scss
+++ b/src/public/components/Navbar/styles.scss
@@ -52,11 +52,14 @@
   li {
     display: inline-block;
     padding: 12px;
+    margin: 0 22px 0;
   }
 
   .navbar__link {
     color: $black;
     text-decoration: none;
+    font-size: 14px;
+    font-family: $primaryFont;
 
     &:hover {
       text-decoration: underline;
