--- a/src/public/components/Gallery/styles.scss
+++ b/src/public/components/Gallery/styles.scss
@@ -1,3 +1,15 @@
+@import '../../variables.scss';
+
+.gallery__article {
+  text-align: center;
+  margin-top: 80px;
+  border-top: solid 1px $lightGray;
+}
+
+.image-list {
+  text-align: center;
+}
+
 .image-list-item {
   max-width: 100%;
   width: 200px;
@@ -10,6 +22,7 @@
     line-height: 26px;
     font-weight: normal;
     margin-top: 0;
+    text-align: center;
   }
 }
 
@@ -19,10 +32,6 @@
 }
 
 .mobile {
-  .image-list {
-    text-align: center;
-  }
-
   .image-list-item {
     width: 130px;
     height: auto;
