--- a/src/public/variables.scss
+++ b/src/public/variables.scss
@@ -32,4 +32,6 @@ $secondaryColor_light: lighten($secondaryColor, 50);
 $primaryFont: 'Spartan';
 $secondaryFont: 'Roboto';
 
+// Position and Other
 $top_max: 999;
+$bodyMaxWidth: 1100px;
