--- a/src/public/components/Header/styles.scss
+++ b/src/public/components/Header/styles.scss
@@ -2,11 +2,8 @@
 
 .header__component {
   background-color: $primaryColor;
-  padding: 100px 24px 80px;
+  padding: 0 24px;
   position: relative;
-  background-repeat: no-repeat;
-  background-position: 36px calc(100% + 84px);
-  background-size: 336px;
 
   &.with-avatar {
     .header__body {
@@ -17,9 +14,13 @@
 }
 
 .header__body {
-  max-width: 100%;
+  background-repeat: no-repeat;
+  background-position: 36px calc(100% + 84px);
+  background-size: 336px;
+  max-width: $bodyMaxWidth;
   width: 800px;
-  padding-right: 40px;
+  padding: 100px 0;
+  margin: 0 auto;
 }
 
 .header__component-h1 {
@@ -53,11 +54,14 @@
 .tablet,
 .mobile {
   .header__component {
-    background-position: 50% 20px;
-    background-size: 250px;
     padding: 0;
   }
 
+  .header__body {
+    background-position: 50% 20px;
+    background-size: 250px;
+  }
+  
   .header__component .header__body {
     padding: 305px 12px 24px;
     text-align: center;
