--- a/src/public/styleguide.scss
+++ b/src/public/styleguide.scss
@@ -314,6 +314,10 @@ h4 {
     margin: 30px 0 12px;
     width: 150px;
   }
+  
+  .block-on-mobile {
+    display: block;
+  }
 
   .icon-list {
     padding: 20px 0;
