--- a/src/public/components/Gallery/styles.scss
+++ b/src/public/components/Gallery/styles.scss
@@ -4,6 +4,14 @@
   text-align: center;
   margin-top: 80px;
   border-top: solid 1px $lightGray;
+
+  .gallery__article__intro {
+    max-width: 100%;
+    width: 499px;
+    margin: 0 auto 60px;
+    text-align: center;
+    font-size: 18px;
+  }
 }
 
 .image-list {
