--- a/src/public/variables.scss
+++ b/src/public/variables.scss
@@ -27,11 +27,13 @@ $linkColorText: lighten($linkColor, 60);
 $primaryColor_light: lighten($primaryColor, 40);
 $secondaryColor_light: lighten($secondaryColor, 50);
 
-
 // FONTS
 $primaryFont: 'Spartan';
 $secondaryFont: 'Roboto';
+$bodyTextColor: $black;
 
 // Position and Other
 $top_max: 999;
+$top_justBelowMax: 998;
+$top_belowMax: 997;
 $bodyMaxWidth: 1100px;
