--- a/.storybook/layout/styles.scss
+++ b/.storybook/layout/styles.scss
@@ -61,6 +61,11 @@
     font-family: "Courier", sans-serif;
   }
 
+  th:nth-child(3),
+  td:nth-child(3) {
+    max-width: 200px;
+  }
+
   td:nth-child(4) {
     color: #f00;
     font-family: "Courier", sans-serif;
