--- a/.storybook/layout/styles.scss
+++ b/.storybook/layout/styles.scss
@@ -83,3 +83,67 @@
     border-bottom: 0;
   }
 }
+
+
+@keyframes FadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  19% {
+    opacity: 1;
+  }
+
+  20% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes ComeIn {
+  0% {
+    opacity: 0;
+  }
+
+  19% {
+    opacity: 0;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.transition-children {
+  overflow: hidden;
+  position: relative;
+
+  * {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
+
+.transition-children img:first-child {
+    opacity: 1;
+    z-index: +50;
+    animation: FadeOut 6s infinite;
+    animation-fill-mode: both;
+    animation-delay: 3s;
+}
+
+.transition-children img:nth-child(2) {
+    opacity: 0;
+    z-index: 0;
+    animation: ComIn 6s infinite;
+    animation-fill-mode: both;
+    animation-delay: 3s;
+}
