Fix storybook prod build

--- a/.storybook/layout/styles.scss
+++ b/.storybook/layout/styles.scss
@@ -1,4 +1,4 @@
-@import '../../@thewickedwebdev/components/dist/bundle.css';
+@import '~@thewickedwebdev/components/dist/bundle.css';
 
 @mixin code {
   display: inline-block;
