--- a/src/public/local-components/Header/styles.scss
+++ b/src/public/local-components/Header/styles.scss
@@ -20,6 +20,7 @@
   width: 800px;
   padding: 100px 0;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .header__component-h1 {
@@ -57,6 +58,7 @@
   }
 
   .header__body {
+    width: auto;
     background-position: 50% 20px;
     background-size: 250px;
   }
